# fastapi-jobs

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg
backend/: main.py
backend/apis/: base.py
backend/apis/general_pages/: route_homepage.py
backend/apis/version1/: route_general_pages.py  route_jobs.py  route_login.py  route_users.py
backend/core/: config.py  hashing.py  security.py
backend/db/: base.py  session.py
backend/db/models/: jobs.py  users.py
backend/db/repository/: jobs.py  login.py  users.py
backend/schemas/: jobs.py  users.py
backend/templates/components/: navbar.html
backend/templates/shared/: base.html
tests/: conftest.py  test_poetry_fastapi.py
tests/test_routes/: test_jobs.py  test_users.py
tests/utils/: users.py
