[tool.poetry]
name = "poetry-fastapi"
version = "0.1.0"
description = ""
authors = ["karina.yesbukenova <karina.yesbukenova@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
Jinja2 = "^3.1.2"
aiofiles = "^0.8.0"
SQLAlchemy = "^1.4.36"
python-dotenv = "^0.20.0"
psycopg2-binary = "^2.9.3"
pydantic = {extras = ["email"], version = "^1.9.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
